// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: get.one.byUnique is called for non-extant domain then: full result matches snapshot 1`] = `null`;

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: get.one.byUnique is called for non-extant domain then: error matches snapshot 1`] = `
{
  "errorMessage": "waitForSquarespaceReactRender: content did not render within 60000ms. selector=h2:has-text("Domain Nameservers"), [data-testid="nameservers"]. body preview: ",
  "errorName": "Error",
}
`;

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: get.one.byUnique is called then: full entity matches snapshot 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": null,
}
`;

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: set.findsert is called with same state then: full entity matches snapshot 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": null,
}
`;

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: set.upsert is called with custom nameservers then: full entity matches snapshot 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": [
    "ns1.cloudflare.com",
    "ns2.cloudflare.com",
  ],
}
`;

exports[`DeclaredSquarespaceDomainNameserversDao given: a Squarespace account with domains when: set.upsert is called with null (reset to default) then: full entity matches snapshot 1`] = `
DeclaredSquarespaceDomainNameservers {
  "domain": DomainLiteral {
    "name": "sunshineoceansurferturtles.com",
  },
  "nameservers": null,
}
`;
